# mahzen

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  solo.yml  tsconfig.json
.context/: icon-history-list.txt
.github/workflows/: release.yml
Mahzen/: ContentView.swift  Info.plist  Mahzen.local.entitlements  MahzenApp.swift
Mahzen.xcodeproj/: project.pbxproj
Mahzen/App/: AppModel.swift  TransferManager.swift
Mahzen/Models/: S3Models.swift  StorageTarget.swift  TransferItem.swift
Mahzen/S3/: AWSPercentEncoding.swift  AWSSigV4Signer.swift  S3Client.swift  S3MetricsComputer.swift  S3TransferSession.swift  S3XMLParsers.swift
Mahzen/Storage/: CredentialsStore.swift  (+4 more)
Second Chance/: ContentView.swift  Persistence.swift  Second_ChanceApp.swift
Second Chance.xcodeproj/: project.pbxproj
docs/: tauri-rewrite-draft.md
scripts/: bump-version.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: clone.rs  files.rs  indexing.rs  mod.rs  objects.rs  settings.rs  sync.rs  targets.rs  transfers.rs
src-tauri/src/core/: clone_engine.rs  index_engine.rs  mod.rs
src-tauri/src/core/s3/: mod.rs
src-tauri/src/core/storage/: migrations.rs  mod.rs  sqlite.rs
src-tauri/src/core/storage/repositories/: bucket_stats_repo.rs  clone_repo.rs  credentials_repo.rs  index_repo.rs  mod.rs  settings_repo.rs  sync_profiles_repo.rs  targets_repo.rs  transfer_repo.rs
website/: package-lock.json  package.json
(+108 files in other folders)
